Revert back to revision before I fucked things up.  Fix logging, add smoke test and load generator.  Move partition manager test console back into main.  Fix configurations, cleave ControllerConfiguration from BasicConfiguration.