@@ -16,7 +16,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 For more information: www.smartfrog.org
 
- */
+*/
 package org.smartfrog.services.anubis.locator;
 
 import java.util.HashMap;
@@ -26,6 +26,7 @@ import java.util.Random;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
+import javax.annotation.PostConstruct;
 import javax.annotation.PreDestroy;
 
 import org.smartfrog.services.anubis.locator.msg.RegisterMsg;
@@ -47,12 +48,11 @@ public class Locator implements PartitionNotification, AnubisLocator {
         private long counter = 0;
 
         public String instance() {
-            return identity.id + "/" + identity.epoch + "/"
-                   + Long.toString(counter++);
+            return identity.id + "/" + identity.epoch + "/" + Long.toString(counter++);
         }
     }
 
-    public ThreadLocal<Object> callingThread = new ThreadLocal<Object>();
+    public ThreadLocal callingThread = new ThreadLocal();
     public GlobalRegisterImpl global = null; // public for debug
     public LocalRegisterImpl local = null; // public for debug
     public Integer me = null; // public for debug
@@ -60,8 +60,8 @@ public class Locator implements PartitionNotification, AnubisLocator {
     private long heartbeatTimeout = 0;
     private InstanceGenerator instanceGenerator = new InstanceGenerator();
     private Integer leader = null;
-    private Map<Integer, MessageConnection> links = new HashMap<Integer, MessageConnection>();
-    private final static Logger log = Logger.getLogger(Locator.class.getCanonicalName());
+    private Map links = new HashMap();
+    private static final Logger log = Logger.getLogger(Locator.class.getCanonicalName());
     private long maxTransDelay;
     private Identity identity = null;
     private Partition partition = null;
@@ -76,29 +76,11 @@ public class Locator implements PartitionNotification, AnubisLocator {
     private boolean stable = false;
     private ActiveTimeQueue timers = null; // public for debug
 
-    @Deployed
-    public void deployed() {
-        me = Integer.valueOf(identity.id);
-        maxTransDelay = heartbeatTimeout * heartbeatInterval;
-        timers = new ActiveTimeQueue("Anubis: Locator timers (node " + me + ")");
-        global = new GlobalRegisterImpl(identity, this);
-        local = new LocalRegisterImpl(identity, this);
-        random = new Random(System.currentTimeMillis() + 1966 * me.longValue());
-
-        global.start();
-        local.start();
-        timers.start();
-        stabilityQueue.start();
-        partition.register(this);
-    }
-
-    @Override
     public void deregisterListener(AnubisListener listener) {
         local.deregisterListener(listener);
         // don't set timers to null in listener
     }
 
-    @Override
     public void deregisterProvider(AnubisProvider provider) {
         local.deregisterProvider(provider);
     }
@@ -106,7 +88,6 @@ public class Locator implements PartitionNotification, AnubisLocator {
     /**
      * deregisterStability deregisters a stability notification iterface.
      */
-    @Override
     public void deregisterStability(AnubisStability stability) {
         local.deregisterStability(stability);
     }
@@ -119,50 +100,43 @@ public class Locator implements PartitionNotification, AnubisLocator {
         return heartbeatTimeout;
     }
 
-    public Identity getIdentity() {
-        return identity;
-    }
-
-    @Override
     public long getmaxDelay() {
         return maxTransDelay;
+    }
+
+    public Identity getIdentity() {
+        return identity;
     }
 
     public Partition getPartition() {
         return partition;
     }
 
-    @Override
     public ActiveTimeQueue getTimeQueue() {
         return timers;
     }
 
-    @Override
     public void newProviderValue(AnubisProvider provider) {
         local.newProviderValue(provider);
     }
 
     /**
-     * PartitionNotification interface. delivery of a message from the partition
-     * transport
-     * 
-     * @param obj
-     *            - the message
-     * @param sender
-     *            - the sending node
-     * @param time
-     *            - the time sent
+     * PartitionNotification interface.
+     * delivery of a message from the partition transport
+     *
+     * @param obj - the message
+     * @param sender - the sending node
+     * @param time - the time sent
      */
-    @Override
     public void objectNotification(Object obj, int sender, long time) {
 
         /**
-         * As a sanity check see that it is a valid message type. Then pass to
-         * the approriate register.
+         * As a sanity check see that it is a valid message type.
+         * Then pass to the approriate register.
          */
         if (obj instanceof RegisterMsg) {
             deliverRequest((RegisterMsg) obj);
-        } else {
+        } else if (log.isLoggable(Level.SEVERE)) {
             log.severe("Locator received un-recognised message " + obj
                        + " in objectNotificaiton");
         }
@@ -170,18 +144,15 @@ public class Locator implements PartitionNotification, AnubisLocator {
 
     /**
      * This is a temporary fix for a deadlock bug. The implementation of links
-     * maintenance (calls to send(), clearConnections() and
-     * dropBrokenConnections()) is brain dead in that it can cause a deadlock
-     * because upcoming notifications from the partitionManager may deadlock
-     * with downward send() invocations from the registers. Making
-     * partitionNotification() asynchronous by queueing the requests will avoid
-     * the deadlock. Later the implementation of request servicing and link
-     * maintenance should be examined.
-     * 
+     * maintenance (calls to send(), clearConnections() and dropBrokenConnections())
+     * is brain dead in that it can cause a deadlock because upcoming notifications
+     * from the partitionManager may deadlock with downward send() invocations from
+     * the registers. Making partitionNotification() asynchronous by queueing
+     * the requests will avoid the deadlock. Later the implementation of
+     * request servicing and link maintenance should be examined.
      * @param view
      * @param leader
      */
-    @Override
     public void partitionNotification(View view, int leader) {
         stabilityQueue.put(view, leader);
     }
@@ -196,30 +167,30 @@ public class Locator implements PartitionNotification, AnubisLocator {
          * leader holds the active global register.
          */
         stable = view.isStable();
-        this.leader = Integer.valueOf(leader);
+        this.leader = new Integer(leader);
 
         /**
-         * The view will only be the same or larger when a stable report is
-         * received. If it was stable already it may have jumped to a larger
-         * view that has become stable. If it was unstable, then again the new
-         * one will be the same or larger. Accordingly, we can not lose any
-         * nodes in becoming stable, however, a different node may have over as
-         * leader - so the global may have moved. So......
-         * 
+         * The view will only be the same or larger when a stable report
+         * is received. If it was stable already it may have jumped to
+         * a larger view that has become stable. If it was unstable, then again
+         * the new one will be the same or larger. Accordingly, we can not lose
+         * any nodes in becoming stable, however, a different node may have
+         * over as leader - so the global may have moved. So......
+         *
          * ....if the global has changed we need to start using the new one.
          */
         if (view.isStable()) {
 
             /**
-             * No point in putting jitter in at the global because it doesn't
-             * send messages at stability.
+             * No point in putting jitter in at the global because it
+             * doesn't send messages at stability.
              */
             global.stable(leader);
 
             /**
-             * Introduce jitter to prevent the nodes all hitting the leader at
-             * the same time. This should really have a max delay proportional
-             * to the heartbeat interval.
+             * Introduce jitter to prevent the nodes all hitting the leader
+             * at the same time. This should really have a max delay
+             * proportional to the heartbeat interval.
              */
             try {
                 wait(random.nextInt(1000));
@@ -235,7 +206,7 @@ public class Locator implements PartitionNotification, AnubisLocator {
          * become unstable. Accordingly, some providers may have become
          * inaccessible (absent) if they are on nodes that have vanished. Also
          * the global register may have been lost. So....
-         * 
+         *
          * ....check if the global has changed and check for lost providers.
          */
         else {
@@ -245,7 +216,6 @@ public class Locator implements PartitionNotification, AnubisLocator {
         }
     }
 
-    @Override
     public void registerListener(AnubisListener listener) {
         listener.setTimerQueue(timers);
         local.registerListener(listener);
@@ -253,9 +223,8 @@ public class Locator implements PartitionNotification, AnubisLocator {
 
     /**
      * AnubisLocator interface
-     * 
+     *
      */
-    @Override
     public void registerProvider(AnubisProvider provider) {
         /**
          * set the time of registration and create an instance (UID) for this
@@ -271,7 +240,6 @@ public class Locator implements PartitionNotification, AnubisLocator {
      * This interface is called to inform the user when the local partition
      * becomes stable or unstable.
      */
-    @Override
     public void registerStability(AnubisStability stability) {
         stability.setTimerQueue(timers);
         local.registerStability(stability);
@@ -279,12 +247,12 @@ public class Locator implements PartitionNotification, AnubisLocator {
 
     /**
      * Handle deliver of messages to the global register. If the partition is
-     * not stable the message will be dropped. Access to the global register is
-     * suspended during periods of instability because it may move. This
-     * constraint will be relaxed in a later version. If the leader is this node
-     * then this nodes global register is the active one, so bypass the comms
-     * and deliver directly to the global register.
-     * 
+     * not stable the message will be dropped. Access to the global register
+     * is suspended during periods of instability because it may move. This
+     * constraint will be relaxed in a later version. If the leader is this
+     * node then this nodes global register is the active one, so bypass the
+     * comms and deliver directly to the global register.
+     *
      * @param msg
      */
     public void sendToGlobal(RegisterMsg msg) {
@@ -309,11 +277,11 @@ public class Locator implements PartitionNotification, AnubisLocator {
     }
 
     /**
-     * Handle delivery of messages to local registers. Messages are delivered to
-     * peer local registers at any time, regardless of partition stability. If
-     * the target node is this one then bypass the communications and deliver
-     * directly to the local register.
-     * 
+     * Handle delivery of messages to local registers. Messages are delivered
+     * to peer local registers at any time, regardless of partition stability.
+     * If the target node is this one then bypass the communications and
+     * deliver directly to the local register.
+     *
      * @param msg
      * @param node
      */
@@ -338,11 +306,27 @@ public class Locator implements PartitionNotification, AnubisLocator {
     }
 
     public void setIdentity(Identity myId) {
-        identity = myId;
+        this.identity = myId;
     }
 
     public void setPartition(Partition partition) {
         this.partition = partition;
+    }
+
+    @Deployed
+    public void deployed() {
+        me = new Integer(identity.id);
+        maxTransDelay = heartbeatTimeout * heartbeatInterval;
+        timers = new ActiveTimeQueue("Anubis: Locator timers (node " + me + ")");
+        global = new GlobalRegisterImpl(identity, this);
+        local = new LocalRegisterImpl(identity, this);
+        random = new Random(System.currentTimeMillis() + 1966 * me.longValue());
+
+        global.start();
+        local.start();
+        timers.start();
+        stabilityQueue.start();
+        partition.register(this);
     }
 
     @PreDestroy
@@ -357,8 +341,22 @@ public class Locator implements PartitionNotification, AnubisLocator {
     }
 
     /**
+     * Remove all connections managed by the locator.
+     */
+    @SuppressWarnings("unused")
+    private void clearConnections() {
+        synchronized (links) {
+            Iterator iter = links.values().iterator();
+            while (iter.hasNext()) {
+                ((MessageConnection) iter.next()).disconnect();
+            }
+            links.clear();
+        }
+    }
+
+    /**
      * Deliver a request to the locator.
-     * 
+     *
      * @param msg
      */
     private void deliverRequest(RegisterMsg msg) {
@@ -370,17 +368,19 @@ public class Locator implements PartitionNotification, AnubisLocator {
     }
 
     /**
-     * Drop connections to nodes that are not in the view - they will be broken.
-     * 
+     * Drop connections to nodes that are not in the view - they will
+     * be broken.
+     *
      * @param v
      */
     private void dropBrokenConnections(View v) {
         synchronized (links) {
-            Iterator<Map.Entry<Integer, MessageConnection>> iter = links.entrySet().iterator();
+            Iterator iter = links.entrySet().iterator();
             while (iter.hasNext()) {
-                Map.Entry<Integer, MessageConnection> entry = iter.next();
-                if (!v.contains(entry.getKey().intValue())) {
-                    entry.getValue().disconnect();
+                Map.Entry entry = (Map.Entry) iter.next();
+                Integer node = (Integer) entry.getKey();
+                if (!v.contains(node.intValue())) {
+                    ((MessageConnection) entry.getValue()).disconnect();
                     iter.remove();
                 }
             }
@@ -388,17 +388,17 @@ public class Locator implements PartitionNotification, AnubisLocator {
     }
 
     /**
-     * The locator manages connections between nodes. Connections are created on
-     * demand in the send method. If the recipient drops out of the partition
+     * The locator manages connections between nodes. Connections are created
+     * on demand in the send method. If the recipient drops out of the partition
      * during the connect() call we will get a null connection - in that case
      * just do nothing.
-     * 
+     *
      * @param obj
      * @param node
      */
     private void send(Object obj, Integer node) {
         synchronized (links) {
-            MessageConnection con = links.get(node);
+            MessageConnection con = (MessageConnection) links.get(node);
             if (con == null) {
                 con = partition.connect(node.intValue());
                 if (con == null) {
