@@ -16,13 +16,17 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 For more information: www.smartfrog.org
 
- */
+*/
 package org.smartfrog.services.anubis.locator.registers;
 
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+
+import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
 
 import org.smartfrog.services.anubis.locator.AnubisListener;
 import org.smartfrog.services.anubis.locator.AnubisProvider;
@@ -40,27 +44,20 @@ import org.smartfrog.services.anubis.partition.views.View;
 public class LocalRegisterImpl {
 
     /**
-     * RequestServer is required to avoid a potential deadlock between the local
-     * and global if they send messages to each other on the local node. Sending
-     * a message to the local node results in direct delivery by method call in
-     * the same thread. It is possible for a thread that holds the
-     * GlobalRegisterImpl monitor to make a call to the LocalRegisterImpl, and
-     * vice versa at the same time. So, instead of blocking on a monitor we
-     * create a queue of requests for the global and service the queue with a
-     * single thread.
+     * RequestServer is required to avoid a potential deadlock
+     * between the local and global if they send messages to each
+     * other on the local node. Sending a message to the local node
+     * results in direct delivery by method call in the same thread.
+     * It is possible for a thread that holds the GlobalRegisterImpl monitor
+     * to make a call to the LocalRegisterImpl, and vice versa at the same time.
+     * So, instead of blocking on a monitor we create a queue of requests for
+     * the global and service the queue with a single thread.
      */
     private class RequestServer extends Thread {
         private boolean running = false;
 
         public RequestServer() {
             super();
-            setUncaughtExceptionHandler(new UncaughtExceptionHandler() {
-                
-                @Override
-                public void uncaughtException(Thread t, Throwable e) {
-                    log.log(Level.WARNING, "Uncaught exception", e);
-                }
-            });
         }
 
         @Override
@@ -70,10 +67,9 @@ public class LocalRegisterImpl {
              * server object for this thread. The locator is then able to check
              * if calls to its interface are made by this thread by checking the
              * value of locator.callingThread and comparing it to this object.
-             * 
+             *
              * This is the method used to check if the user is making illegal
-             * re-entrant calls during an upcall initiated by the local
-             * register.
+             * re-entrant calls during an upcall initiated by the local register.
              */
             locator.callingThread.set(this);
             running = true;
@@ -90,9 +86,11 @@ public class LocalRegisterImpl {
                 } else if (obj == null) {
                     continue;
                 } else {
-                    log.severe(me
-                               + " *** Local register encountered unknown request or message type: "
-                               + obj);
+                    if (log.isLoggable(Level.SEVERE)) {
+                        log.severe(me
+                                   + " *** Local register encountered unknown request or message type: "
+                                   + obj);
+                    }
                 }
             }
         }
@@ -102,7 +100,7 @@ public class LocalRegisterImpl {
         }
     }
 
-    private static class UserListenerRequest {
+    private class UserListenerRequest {
         public final static int Deregister = 2;
         public final static int Register = 1;
         @SuppressWarnings("unused")
@@ -116,7 +114,7 @@ public class LocalRegisterImpl {
         }
     }
 
-    private static class UserProviderRequest {
+    private class UserProviderRequest {
         public final static int Deregister = 2;
         public final static int NewValue = 3;
         public final static int Register = 1;
@@ -136,7 +134,7 @@ public class LocalRegisterImpl {
         }
     }
 
-    private static class UserStabilityRequest {
+    private class UserStabilityRequest {
         public final static int Deregister = 2;
         public final static int Register = 1;
         @SuppressWarnings("unused")
@@ -150,24 +148,22 @@ public class LocalRegisterImpl {
         }
     }
 
-    public RequestServer server = new RequestServer(); // public so Locator can
-                                                       // test for re-entry
-    public Set<AnubisStability> stabilityNotifications = new HashSet<AnubisStability>();
+    public RequestServer server = new RequestServer(); // public so Locator can test for re-entry
+    public Set stabilityNotifications = new HashSet();
     public boolean stable = true;
     public long timeRef = -1;
     private DebugFrame debug = null;
     private LocalListeners listeners = null; // name to Listeners + the provider
     private Locator locator = null;
-    private static Logger log = Logger.getLogger(LocalRegisterImpl.class.getCanonicalName());
+    private static final Logger log = Logger.getLogger(LocalRegisterImpl.class.getCanonicalName());
     private Identity me = null;
     private Integer node = null;
-    private LocalProviders providers = null; // name to provider + their
-                                             // registered listeners
-    private BlockingQueue<Object> requests = new BlockingQueue<Object>();
+    private LocalProviders providers = null; // name to provider + their registered listeners
+    private BlockingQueue requests = new BlockingQueue();
 
     public LocalRegisterImpl(Identity id, Locator locator) {
         me = id;
-        node = Integer.valueOf(me.id);
+        node = new Integer(me.id);
         providers = new LocalProviders(locator, node);
         listeners = new LocalListeners(locator, node);
         this.locator = locator;
@@ -180,10 +176,11 @@ public class LocalRegisterImpl {
     }
 
     /**
-     * deregisterListener: deregister locally. deregister with providers local
-     * if appropriate. deregister globally if the listener was pending and there
-     * are no more. The global only has pending listeners registered.
-     * 
+     * deregisterListener: deregister locally.
+     *                     deregister with providers local if appropriate.
+     *                     deregister globally if the listener was pending
+     *                     and there are no more.
+     *                     The global only has pending listeners registered.
      * @param listener
      */
     public void deregisterListener(AnubisListener listener) {
@@ -192,10 +189,11 @@ public class LocalRegisterImpl {
     }
 
     /**
-     * deregisterProvider: deregister with global register. local register is
-     * responsible for informing listeners that have already contacted this
-     * register. deregister with local register.
-     * 
+     * deregisterProvider: deregister with global register.
+     *                     local register is responsible for informing
+     *                     listeners that have already contacted this
+     *                     register.
+     *                     deregister with local register.
      * @param provider
      */
     public void deregisterProvider(AnubisProvider provider) {
@@ -205,9 +203,7 @@ public class LocalRegisterImpl {
 
     /**
      * deregisterStability: deregister a stability notification object.
-     * 
-     * @param stability
-     *            AnubisStability
+     * @param stability AnubisStability
      */
     public void deregisterStability(AnubisStability stability) {
         requests.put(new UserStabilityRequest(UserStabilityRequest.Deregister,
@@ -216,7 +212,7 @@ public class LocalRegisterImpl {
 
     /**
      * indicates that a provider has been assigned a new value.
-     * 
+     *
      * @param provider
      */
     public void newProviderValue(AnubisProvider provider) {
@@ -234,10 +230,11 @@ public class LocalRegisterImpl {
     }
 
     /**
-     * registerProvider: add provider to global registry and locally. the global
-     * is responsible for telling listeners where the provider is. the listeners
-     * are responsible for contacting this local registry to get provider info.
-     * 
+     * registerProvider: add provider to global registry and locally.
+     *                   the global is responsible for telling listeners
+     *                   where the provider is.
+     *                   the listeners are responsible for contacting this
+     *                   local registry to get provider info.
      * @param provider
      */
     public void registerProvider(AnubisProvider provider) {
@@ -248,9 +245,7 @@ public class LocalRegisterImpl {
 
     /**
      * registerStability: register a stability notification object.
-     * 
-     * @param stability
-     *            AnubisStability
+     * @param stability AnubisStability
      */
     public void registerStability(AnubisStability stability) {
         requests.put(new UserStabilityRequest(UserStabilityRequest.Register,
@@ -272,10 +267,12 @@ public class LocalRegisterImpl {
     }
 
     /**
-     * When stable: 1) find the global 2) start accessing it 3) register all
-     * providers and listeners again Note: we are being dumb and pessimistic
-     * here - always recover all registrations - could be more clever.
-     * 
+     * When stable:
+     * 1) find the global
+     * 2) start accessing it
+     * 3) register all providers and listeners again
+     * Note: we are being dumb and pessimistic here - always recover all
+     * registrations - could be more clever.
      * @param leader
      * @param timeStamp
      */
@@ -313,9 +310,9 @@ public class LocalRegisterImpl {
     }
 
     /**
-     * When unstable: 1) stop accessing the global - it needs time to clear up
+     * When unstable:
+     * 1) stop accessing the global - it needs time to clear up
      * 2) check provider and listener dependencies - I could have lost some
-     * 
      * @param view
      */
     public synchronized void unstable(View view) {
@@ -356,7 +353,10 @@ public class LocalRegisterImpl {
                 break;
 
             default:
-                log.severe(me + " *** Local received unexpected message " + msg);
+                if (log.isLoggable(Level.SEVERE)) {
+                    log.severe(me + " *** Local received unexpected message "
+                               + msg);
+                }
         }
     }
 
@@ -375,9 +375,11 @@ public class LocalRegisterImpl {
                 break;
 
             default:
-                log.severe(me
-                           + " *** Local register encountered unknown user stability request type: "
-                           + request.type);
+                if (log.isLoggable(Level.SEVERE)) {
+                    log.severe(me
+                               + " *** Local register encountered unknown user stability request type: "
+                               + request.type);
+                }
         }
     }
 
@@ -405,9 +407,11 @@ public class LocalRegisterImpl {
                 break;
 
             default:
-                log.severe(me
-                           + " *** Local register encountered unknown user provider request type: "
-                           + request.type);
+                if (log.isLoggable(Level.SEVERE)) {
+                    log.severe(me
+                               + " *** Local register encountered unknown user provider request type: "
+                               + request.type);
+                }
         }
     }
 
@@ -425,9 +429,11 @@ public class LocalRegisterImpl {
                 break;
 
             default:
-                log.severe(me
-                           + " *** Local register encountered unknown user stability request type: "
-                           + request.type);
+                if (log.isLoggable(Level.SEVERE)) {
+                    log.severe(me
+                               + " *** Local register encountered unknown user stability request type: "
+                               + request.type);
+                }
         }
     }
 
@@ -435,12 +441,13 @@ public class LocalRegisterImpl {
      * notify all stability notification objects
      */
     private void notifyStability() {
-        for (AnubisStability notification : stabilityNotifications) {
-            notification.notifyStability(stable, timeRef);
+        Iterator iter = stabilityNotifications.iterator();
+        while (iter.hasNext()) {
+            ((AnubisStability) iter.next()).notifyStability(stable, timeRef);
         }
     }
 
-    private synchronized void updateDebugFrame() {
+    private void updateDebugFrame() {
         if (debug != null) {
             debug.update();
         }
